KKUTU_ERROR.log
This is an error log file of the game server.
You may use like `tail -f KKUTU_ERROR.log` to watch this.
:8496 [2019-9-29 20:53:24] ERROR: SyntaxError: Unexpected token case
C:\Users\박부근\Desktop\KKuTu-master\Server\lib\Game\games\classic.js:305
			case 3: return (text.substr(0, 3) == char) || (text.substr(0, 2) == char.slice(1));
			^^^^

SyntaxError: Unexpected token case
    at Module._compile (internal/modules/cjs/loader.js:872:18)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:947:10)
    at Module.load (internal/modules/cjs/loader.js:790:32)
    at Function.Module._load (internal/modules/cjs/loader.js:703:12)
    at Module.require (internal/modules/cjs/loader.js:830:19)
    at require (internal/modules/cjs/helpers.js:68:18)
    at Object.exports.init (C:\Users\박부근\Desktop\KKuTu-master\Server\lib\Game\kkutu.js:61:13)
    at Object.MainDB.ready (C:\Users\박부근\Desktop\KKuTu-master\Server\lib\Game\slave.js:104:8)
    at C:\Users\박부근\Desktop\KKuTu-master\Server\lib\Web\db.js:87:30
    at BoundPool.<anonymous> (C:\Users\박부근\Desktop\KKuTu-master\Server\lib\node_modules\pg-pool\index.js:137:9):8496 [2019-9-29 20:53:36] ERROR: SyntaxError: Unexpected token case
C:\Users\박부근\Desktop\KKuTu-master\Server\lib\Game\games\classic.js:305
			case 3: return (text.substr(0, 3) == char) || (text.substr(0, 2) == char.slice(1));
			^^^^

SyntaxError: Unexpected token case
    at Module._compile (internal/modules/cjs/loader.js:872:18)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:947:10)
    at Module.load (internal/modules/cjs/loader.js:790:32)
    at Function.Module._load (internal/modules/cjs/loader.js:703:12)
    at Module.require (internal/modules/cjs/loader.js:830:19)
    at require (internal/modules/cjs/helpers.js:68:18)
    at Object.exports.init (C:\Users\박부근\Desktop\KKuTu-master\Server\lib\Game\kkutu.js:61:13)
    at Object.MainDB.ready (C:\Users\박부근\Desktop\KKuTu-master\Server\lib\Game\slave.js:104:8)
    at C:\Users\박부근\Desktop\KKuTu-master\Server\lib\Web\db.js:87:30
    at BoundPool.<anonymous> (C:\Users\박부근\Desktop\KKuTu-master\Server\lib\node_modules\pg-pool\index.js:137:9):8496 [2019-9-29 20:53:48] ERROR: SyntaxError: Unexpected token case
C:\Users\박부근\Desktop\KKuTu-master\Server\lib\Game\games\classic.js:305
			case 3: return (text.substr(0, 3) == char) || (text.substr(0, 2) == char.slice(1));
			^^^^

SyntaxError: Unexpected token case
    at Module._compile (internal/modules/cjs/loader.js:872:18)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:947:10)
    at Module.load (internal/modules/cjs/loader.js:790:32)
    at Function.Module._load (internal/modules/cjs/loader.js:703:12)
    at Module.require (internal/modules/cjs/loader.js:830:19)
    at require (internal/modules/cjs/helpers.js:68:18)
    at Object.exports.init (C:\Users\박부근\Desktop\KKuTu-master\Server\lib\Game\kkutu.js:61:13)
    at Object.MainDB.ready (C:\Users\박부근\Desktop\KKuTu-master\Server\lib\Game\slave.js:104:8)
    at C:\Users\박부근\Desktop\KKuTu-master\Server\lib\Web\db.js:87:30
    at BoundPool.<anonymous> (C:\Users\박부근\Desktop\KKuTu-master\Server\lib\node_modules\pg-pool\index.js:137:9)